opérateur ok + tabou ok ??